# soricall

./: .env.development.example  .env.example  .env.production.example  .gitignore  README.md  SoriCall_서비스_시나리오_화상얼굴확인_보완본.md  soricall_webapp_face_video_ready.html
services/api/: README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260714_01_add_patent_call_flow.py  20260714_02_family_service_roles.py  20260714_03_enrollment_invitations.py  20260716_01_phone_signup_verification.py  20260716_02_device_enrollments.py  20260716_03_expand_phone_verification_purpose.py  20260719_01_link_confirmation_contacts_to_seniors.py  20260719_02_family_member_approval_state.py  20260719_03_invitation_phone_verification.py  20260719_04_voice_sample_validation.py  20260719_05_face_profile_validation.py  20260719_06_media_import_sessions.py  20260719_07_qr_device_challenges.py  20260719_08_media_import_quality_cleanup.py  20260719_09_media_import_verification.py  20260719_10_direct_liveness.py
services/api/app/: main.py  models.py  schemas.py
services/api/app/api/: deps.py
services/api/app/core/: authorization.py  config.py  database.py  operations.py  security.py
services/api/app/services/: ai_client.py  call_analysis_service.py  call_session_service.py  enrollment_delivery_service.py  family_confirmation_service.py  fcm_service.py  notification_service.py  risk_decision_service.py  risk_service.py  sms_service.py  voice_profile_service.py  (+1 more)
services/api/scripts/: bootstrap_database.sh  reset_database.py  upsert_admin_user.py
(+165 files in other folders)
