[project]
name = "soricall-api"
version = "0.1.0"
description = "SoriCall FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "email-validator>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
